k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: padhal-redis
  namespace: padhal
spec:
  selector:
    app: padhal-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  type: ClusterIP
